--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   sqflite: ^2.2.8+4
   device_preview: ^1.1.0
   sizer: ^2.0.15
+  image_picker: ^1.0.0
 
 dev_dependencies:
   flutter_test:
